@@ -90,18 +90,6 @@ name|apache
 operator|.
 name|http
 operator|.
-name|NoHttpResponseException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|http
-operator|.
 name|client
 operator|.
 name|HttpClient
@@ -928,14 +916,6 @@ name|followRedirects
 init|=
 literal|false
 decl_stmt|;
-DECL|field|maxRetries
-specifier|private
-specifier|volatile
-name|int
-name|maxRetries
-init|=
-literal|0
-decl_stmt|;
 DECL|field|useMultiPartPost
 specifier|private
 specifier|volatile
@@ -1604,16 +1584,6 @@ name|IOException
 throws|,
 name|SolrServerException
 block|{
-name|HttpRequestBase
-name|method
-init|=
-literal|null
-decl_stmt|;
-name|InputStream
-name|is
-init|=
-literal|null
-decl_stmt|;
 name|SolrParams
 name|params
 init|=
@@ -1766,29 +1736,6 @@ literal|"/"
 operator|+
 name|collection
 expr_stmt|;
-name|int
-name|tries
-init|=
-name|maxRetries
-operator|+
-literal|1
-decl_stmt|;
-try|try
-block|{
-while|while
-condition|(
-name|tries
-operator|--
-operator|>
-literal|0
-condition|)
-block|{
-comment|// Note: since we aren't do intermittent time keeping
-comment|// ourselves, the potential non-timeout latency could be as
-comment|// much as tries-times (plus scheduling effects) the given
-comment|// timeAllowed.
-try|try
-block|{
 if|if
 condition|(
 name|SolrRequest
@@ -1824,8 +1771,7 @@ literal|"GET can't send streams!"
 argument_list|)
 throw|;
 block|}
-name|method
-operator|=
+return|return
 operator|new
 name|HttpGet
 argument_list|(
@@ -1842,9 +1788,8 @@ argument_list|,
 literal|false
 argument_list|)
 argument_list|)
-expr_stmt|;
+return|;
 block|}
-elseif|else
 if|if
 condition|(
 name|SolrRequest
@@ -2320,10 +2265,9 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-name|method
-operator|=
+return|return
 name|postOrPut
-expr_stmt|;
+return|;
 block|}
 comment|// It is has one stream, it is the post body, put the params in the URL
 else|else
@@ -2528,14 +2472,11 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
-name|method
-operator|=
+return|return
 name|postOrPut
-expr_stmt|;
+return|;
 block|}
 block|}
-else|else
-block|{
 throw|throw
 operator|new
 name|SolrServerException
@@ -2548,65 +2489,6 @@ name|getMethod
 argument_list|()
 argument_list|)
 throw|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|NoHttpResponseException
-name|r
-parameter_list|)
-block|{
-name|method
-operator|=
-literal|null
-expr_stmt|;
-if|if
-condition|(
-name|is
-operator|!=
-literal|null
-condition|)
-block|{
-name|is
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-comment|// If out of tries then just rethrow (as normal error).
-if|if
-condition|(
-name|tries
-operator|<
-literal|1
-condition|)
-block|{
-throw|throw
-name|r
-throw|;
-block|}
-block|}
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|ex
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|SolrServerException
-argument_list|(
-literal|"error reading streams"
-argument_list|,
-name|ex
-argument_list|)
-throw|;
-block|}
-return|return
-name|method
-return|;
 block|}
 DECL|method|executeMethod
 specifier|protected
@@ -3590,7 +3472,7 @@ argument_list|)
 throw|;
 block|}
 block|}
-comment|/**    * Set maximum number of retries to attempt in the event of transient errors.    *<p>    * Maximum number of retries to attempt in the event of transient errors.    * Default: 0 (no) retries. No more than 1 recommended.    *</p>    * @param maxRetries    *          No more than 1 recommended    */
+comment|/**    * @deprecated retries should be implemented in client code, and should be considered carefully per-request    */
 DECL|method|setMaxRetries
 specifier|public
 name|void
@@ -3599,33 +3481,7 @@ parameter_list|(
 name|int
 name|maxRetries
 parameter_list|)
-block|{
-if|if
-condition|(
-name|maxRetries
-operator|>
-literal|1
-condition|)
-block|{
-name|log
-operator|.
-name|warn
-argument_list|(
-literal|"HttpSolrServer: maximum Retries "
-operator|+
-name|maxRetries
-operator|+
-literal|"> 1. Maximum recommended retries is 1."
-argument_list|)
-expr_stmt|;
-block|}
-name|this
-operator|.
-name|maxRetries
-operator|=
-name|maxRetries
-expr_stmt|;
-block|}
+block|{ }
 DECL|method|setRequestWriter
 specifier|public
 name|void
